<resources>
    <string name="app_name">速步车队</string>
    <string name="select_dialog_cancel_but_tip">取消</string>
    <string name="select_dialog_ok_but_tip">确定</string>
    <string name="login_info_phone_tip">请输入手机号码</string>
    <string name="login_info_password_tip">密码</string>
    <string name="login_but_tip">登录</string>
    <string name="login_register_tip">注册</string>
	<string name="login_forget_password_tip">忘记密码</string>
	<string name="login_logo_wap_tip">www.spvan.com</string>
	<string name="remotelogin_phone_tip">请输入手机号码</string>
	<string name="remotelogin_checknumber_tip">请输入验证码</string>
	<string name="remotelogin_password_tip">请输入密码</string>
	<string name="remotelogin_get_checknumber_tip">获取验证码</string>
    <string name="remotelogin_but_tip">确定</string>
	<string name="forgetpassword_phone_tip">请输入手机号码</string>
	<string name="forgetpassword_checknumber_tip">请输入验证码</string>
	<string name="forgetpassword_new_password_tip">请输入6位以上新密码</string>
	<string name="forgetpassword_get_checknumber_tip">获取验证码</string>
    <string name="forgetpassword_but_tip">确定</string>
    <string name="checkphone_phone_tip">请输入手机号码</string>
	<string name="checkphone_checknumber_tip">请输入验证码</string>
	<string name="checkphone_new_password_tip">请输入6位以上新密码</string>
	<string name="checkphone_confirm_password_tip">请再次确认密码</string>
	<string name="checkphone_get_checknumber_tip">获取验证码</string>
	<string name="checkphone_but_tip">下一步</string>
	<string name="registerdriver_first_name">姓名</string>
	<string name="registerdriver_first_name_tip">输入姓名</string>
	<string name="registerdriver_last_name">名</string>
	<string name="registerdriver_last_name_tip">输入名字</string>
	<string name="registerdriver_drive_time">驾龄</string>
	<string name="registerdriver_drive_time_tip">输入驾龄</string>
	<string name="registerdriver_drive_time_unit">年</string>
	<string name="registerdriver_resident_area">常驻地区</string>
	<string name="registerdriver_resident_area_tip">点击定位选择地点</string>
	<string name="registerdriver_familiar_city">熟悉城市</string>
	<string name="registerdriver_goods_preference">货物偏好</string>
	<string name="registerdriver_upload_tip">请上传正确清晰的证件照以便我们审核</string>
	<string name="registerdriver_upload_identification">上传身份证</string>
	<string name="registerdriver_upload_identification_tip">（正反面，共2张）</string>
	<string name="registerdriver_upload_driver_license">上传驾驶证</string>
	<string name="registerdriver_upload_driver_license_tip">（共1张）</string>
	<string name="registerdriver_upload_limittime">有效期</string>
	<string name="registerdriver_upload_limittime_tip">点击选择时间</string>
	<string name="registerdriver_next_but_tip">下一步</string>
	<string name="selectcity_search_tip">请输入城市名称（北京/BJ）</string>
	<string name="selectgood_title_tip">货物偏好</string>
	<string name="selectgood_but_ok_tip">确定</string>
	<string name="selectgood_but_cancel_tip">取消</string>
	<string name="selecttime_title_tip">选择时间</string>
	<string name="selecttime_but_ok_tip">确定</string>
	<string name="selecttime_but_cancel_tip">取消</string>
	<string name="select_picture_way_tack_tip">拍照</string>
	<string name="select_picture_way_photo_tip">从相片选取</string>
	<string name="select_picture_way_cancel_tip">取消</string>
	<string name="select_picture_way_tack_tip1">拨打电话</string>
	<string name="select_picture_way_photo_tip1">发送消息</string>
	<string name="select_picture_way_cancel_tip1">取消</string>
	<string name="home_left_tip">我</string>
	<string name="home_right_tip">发现</string>
	<string name="home_title">速步车队</string>
	<string name="home_no_binding_car_tip">未绑定车辆</string>
	<string name="home_binding_car_but_text">绑定车辆</string>
	<string name="setting_gps_title">启动GPS服务</string>
	<string name="setting_gps_tip">用使用此应用程序，请在"设置"中允许访问您的位置并启用GPS卫星</string>
	<string name="setting_gps_but_tip">确定</string>
	<string name="registercar_carnumber">车牌号码</string>
	<string name="registercar_carnumber_tip">粤A 88888</string>
	<string name="registercar_enginenumber">发动机号</string>
	<string name="registercar_enginenumber_tip">输入发动机号</string>
	<string name="registercar_carattribute">车辆属性</string>
	<string name="registercar_carattribute_tip">选择车型及规格尺寸</string>
	<string name="registercar_type_1">尾板</string>
	<string name="registercar_type_2">单侧门</string>
	<string name="registercar_type_3">双侧门</string>
	<string name="registercar_carphoto">车辆照片</string>
	<string name="registercar_carphoto_tip">（正、后、两侧面，共4张）</string>
	<string name="registercar_carphoto_upload_tip">请上传正确清晰的证件照以便我们审核</string>
	<string name="registercar_but_tip">下一步</string>
	<string name="carsize_weight_tip">吨位</string>
	<string name="carsize_size_tip">尺寸</string>
	<string name="uploadcertificates_validity_period">有效期</string>
	<string name="uploadcertificates_validity_period_tip">点击选择时间</string>
	<string name="uploadcertificates_driver_license">行驶证</string>
	<string name="uploadcertificates_driver_license_tip">（正反面，共2张）</string>
	<string name="uploadcertificates_car_insurance">车辆保险</string>
	<string name="uploadcertificates_car_insurance_tip">（共1张）</string>
	<string name="uploadcertificates_operation">营运证</string>
	<string name="uploadcertificates_operation_tip">（共1张）</string>
	<string name="uploadcertificates_customs_supervision_book">海关监管簿</string>
	<string name="uploadcertificates_customs_supervision_book_tip">（共1张）</string>
	<string name="uploadcertificates_but_tip">完成</string>
	<string name="applicationbinding_register_code_tip">请输入您所属企业/车队的注册编码</string>
	<string name="applicationbinding_car_number_tip">请输入要绑定的车牌号码</string>
	<string name="applicationbinding_tip_1">如没有注册编码的企业/车队，请到速步官网www.spvan.com注册获取</string>
	<string name="applicationbinding_tip_2">司机可以在"我的空间"里面进行绑定操作</string>
	<string name="applicationbinding_but_ok_tip">确定</string>
	<string name="applicationbinding_but_cancel_tip">取消</string>
	<string name="changecar_car_number_tip">请输入要绑定的车牌号码</string>
	<string name="changecar_but_tip">确定</string>
	<string name="me_recent_waybill_tip">近期运单</string>
	<string name="me_total_waybill_tip">总运单</string>
	<string name="me_feedback_rate_tip">好评率</string>
	<string name="me_item_personal_message">个人信息</string>
	<string name="me_item_my_appointment">我的预约</string>
	<string name="me_item_drive_record">运单记录</string>
	<string name="me_item_accounting_book">记账本</string>
	<string name="me_item_accounting_qiangbao">钱包</string>
	<string name="me_item_car_management">车辆管理</string>
	<string name="me_item_help">帮助</string>
	<string name="me_item_setting">设置</string>
	<string name="personmessage_phone_tip">联系电话</string>
	<string name="personmessage_certificates_tip">个人证件</string>
	<string name="personmessage_certificates_change_tip">更改</string>
	<string name="personmessage_identification_tip">身份证</string>
	<string name="personmessage_driver_license_tip">驾驶证</string>
	<string name="managercar_car_info_tip">车辆信息</string>
	<string name="managercar_car_number_tip">车牌</string>
	<string name="managercar_engine_number_tip">发动机号</string>
	<string name="managercar_car_type_tip">车型</string>
	<string name="managercar_car_size_tip">规格尺寸</string>
	<string name="managercar_car_picture_tip">车辆照片</string>
	<string name="managercar_car_picture_detail_tip">4视图</string>
	<string name="managercar_other_certificates_tip">其他证件</string>
	<string name="managercar_driver_license_tip">行驶证</string>
	<string name="managercar_car_insurance_tip">车辆保险</string>
	<string name="managercar_operation_tip">营运证</string>
	<string name="managercar_customs_supervision_book">海关管理薄</string>
	<string name="managernocar_tip">您当前未绑定车辆</string>
	<string name="managernocar_but_tip">去绑定车辆</string>
	<string name="select_unbinding_way_tack_tip">解绑车辆</string>
	<string name="select_unbinding_way_photo_tip">解绑企业/车队</string>
	<string name="select_unbinding_way_cancel_tip">取消</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_video">视频</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="attach_video_call">视频通话</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="delete_conversation_messages">删除会话和消息</string>
    <string name="delete_conversation">删除会话</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="button_logout">退出登录</string>
    <string name="button_uploadlog">上传运行日志</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="clear_records">清空记录</string>
    <string name="clear_all_records">是否清空所有聊天记录？</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">搜</string>
    <string name="network_isnot_available">网络不可用</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
    <string name="logout">退出登录</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="dissolution_group_hint">退出后，此群将被解散</string>
    <string name="exit_group">退出</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="em_user_remove">此用户已被移除</string>
    <string name="set">设置</string>
    <string name="notify">新消息提醒</string>
    <string name="newnotify">接收新消息通知</string>
    <string name="voice">声音</string>
    <string name="shake">震动</string>
    <string name="chatset">聊天设置</string>
    <string name="yangshengqi">使用扬声器播放语音</string>
    <string name="book_black">通讯录黑名单</string>
    <string name="session">会话</string>
    <string name="address_book">通讯录</string>
    <string name="setting">设置</string>
    <string name="now_refresh_list">正在刷新联系人</string>
    <string name="Application_and_notify">申请与通知</string>
    <string name="save_new_nickname">保存</string>
    <string name="nickname_description">设置此昵称以后，在与iOS客户端demo聊天过程中，iOS一侧会显示此昵称而不是环信ID，如果对方使用安卓客户端则此设置不生效</string>
    <string name="group_chat">群聊</string>
    <string name="chat_room">聊天室</string>
    <string name="add_friend">添加好友</string>
    <string name="search">搜索</string>
    <string name="black_item">黑名单</string>
    <string name="diagnose">诊断</string>
    <string name="push_nick">iOS离线推送昵称</string>
    <string name="Current_version">当前版本</string>
    <string name="Not_Set">未设置</string>
    <string name="Upload_the_log">上传日志中</string>
    <string name="The_new_group_chat">新建群组</string>
    <string name="add_public_group_chat">添加公开群</string>
    <string name="add_public_chat_room">添加聊天室</string>
</resources>