<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/registercar_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <include
        android:id="@+id/registercar_title"
        layout="@+layout/layout_title" />

    <LinearLayout
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/layout_content_left_right"
        android:paddingRight="@dimen/layout_content_left_right"
        android:paddingTop="@dimen/layout_content_white_background_space" >

        <TextView
            android:layout_width="@dimen/layout_content_white_background_small_title_width"
            android:layout_height="wrap_content"
            android:text="@string/registerdriver_first_name"
            android:textColor="#ffffff"
            android:textSize="@dimen/layout_content_title_size" />

        <EditText
            android:id="@+id/registerdriver_first_nameA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:hint="@string/registerdriver_first_name_tip"
            android:inputType="text"
            android:maxLength="2"
            android:singleLine="true"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:textSize="@dimen/layout_content_text_size" />

        <requestFocus />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/layout_content_left_right"
        android:paddingRight="@dimen/layout_content_left_right"
        android:paddingTop="@dimen/layout_content_white_background_space" >

        <TextView
            android:layout_width="@dimen/layout_content_white_background_big_title_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/registercar_carnumber"
            android:textColor="#6c6c6c"
            android:textSize="@dimen/layout_content_title_size" />

        <EditText
            android:id="@+id/registercar_carnumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="#ffffff"
            android:hint="@string/registercar_carnumber_tip"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="#6c6c6c"
            android:textColorHint="#9c9c9c"
            android:textSize="@dimen/layout_content_text_size" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="@dimen/layout_content_white_background_big_line_left"
        android:layout_marginRight="@dimen/layout_content_left_right"
        android:layout_marginTop="@dimen/layout_content_white_background_space"
        android:background="#9c9c9c" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/layout_content_left_right"
        android:paddingRight="@dimen/layout_content_left_right"
        android:paddingTop="@dimen/layout_content_white_background_space" >

        <TextView
            android:layout_width="@dimen/layout_content_white_background_big_title_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/registercar_enginenumber"
            android:textColor="#6c6c6c"
            android:textSize="@dimen/layout_content_title_size" />

        <EditText
            android:id="@+id/registercar_enginenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="#ffffff"
            android:hint="@string/registercar_enginenumber_tip"
            android:singleLine="true"
            android:textColor="#6c6c6c"
            android:textColorHint="#9c9c9c"
            android:textSize="@dimen/layout_content_text_size" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="@dimen/layout_content_white_background_big_line_left"
        android:layout_marginRight="@dimen/layout_content_left_right"
        android:layout_marginTop="@dimen/layout_content_white_background_space"
        android:background="#9c9c9c" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/registercar_carattribute_but_top_bottom"
        android:paddingLeft="@dimen/layout_content_left_right"
        android:paddingRight="@dimen/layout_content_left_right"
        android:paddingTop="@dimen/registercar_carattribute_but_top_bottom" >

        <TextView
            android:layout_width="@dimen/layout_content_white_background_big_title_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/registercar_carattribute"
            android:textColor="#6c6c6c"
            android:textSize="@dimen/layout_content_title_size" />

        <Button
            android:id="@+id/registercar_carattribute"
            android:layout_width="match_parent"
            android:layout_height="@dimen/registercar_carattribute_but_height"
            android:layout_gravity="center_vertical"
            android:background="@drawable/corner_5dp_gray_white"
            android:ellipsize="end"
            android:gravity="center"
            android:hint="@string/registercar_carattribute_tip"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:textColor="#6c6c6c"
            android:textSize="@dimen/layout_content_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/layout_content_left_right"
        android:paddingRight="@dimen/layout_content_left_right" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/registercar_type_1"
                android:textColor="#6c6c6c"
                android:textSize="@dimen/layout_content_tip_size" />

            <CheckBox
                android:id="@+id/registercar_type_1"
                style="@style/DiDiCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/registercar_type_space" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/registercar_type_2"
                android:textSize="@dimen/layout_content_tip_size" />

            <CheckBox
                android:id="@+id/registercar_type_2"
                style="@style/DiDiCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/registercar_type_space" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/registercar_type_3"
                android:textColor="#6c6c6c"
                android:textSize="@dimen/layout_content_tip_size" />

            <CheckBox
                android:id="@+id/registercar_type_3"
                style="@style/DiDiCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/registercar_type_space" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_content_layout_space"
        android:layout_marginBottom="@dimen/layout_content_white_background_space"
        android:layout_marginTop="@dimen/layout_content_white_background_space"
        android:background="#dddddd" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_content_white_background_space"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/layout_content_left_right"
        android:paddingRight="@dimen/layout_content_left_right" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/registercar_carphoto"
            android:textColor="#6c6c6c"
            android:textSize="@dimen/layout_content_title_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/registercar_carphoto_tip"
            android:textColor="#9c9c9c"
            android:textSize="@dimen/layout_content_tip_size" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_content_white_background_space"
        android:paddingLeft="@dimen/layout_content_left_right"
        android:paddingRight="@dimen/layout_content_left_right"
        android:text="@string/registercar_carphoto_upload_tip"
        android:textColor="#DE4A4A"
        android:textSize="@dimen/text_12_sp" />

    <GridView
        android:id="@+id/registercar_carphoto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/layout_content_white_background_space"
        android:layout_weight="1"
        android:listSelector="#00000000"
        android:numColumns="4"
        android:paddingLeft="@dimen/layout_content_left_right"
        android:paddingRight="@dimen/layout_content_left_right"
        android:scrollbars="none"
        android:stretchMode="columnWidth" >
    </GridView>

    <Button
        android:id="@+id/registercar_but"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_content_but_height"
        android:layout_margin="@dimen/layout_content_left_right"
        android:background="@drawable/login_register_but"
        android:gravity="center"
        android:text="@string/registercar_but_tip"
        android:textColor="#ffffff"
        android:textSize="@dimen/layout_content_but_text_size" />

</LinearLayout>